--- a/index/index.html
+++ b/index/index.html
@@ -72,6 +72,6 @@
   </footer>
 
   <!-- JavaScript -->
-  <script src="js/scripts.js"></script>
+  <script src="scripts/js/scripts.js"></script>
 </body>
 </html>
