--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="icon" href="favicon.ico" type="image/x-icon" />
 
   <!-- CSS -->
-  <link rel="stylesheet" href="css/styles.css" />
+  <link rel="stylesheet" href="styles.css" />
 
   <!-- Facebook Open Graph Meta Tags -->
   <meta property="og:title" content="Kabale Chamber Directory" />
@@ -72,6 +72,7 @@
   </footer>
 
   <!-- JavaScript -->
-  <script src="scripts/js/scripts.js"></script>
+  <script src="/
+  scripts.js"></script>
 </body>
 </html>
