--- a/index.html
+++ b/index.html
@@ -20,7 +20,22 @@
   <meta property="og:url" content="https://yourdomain.com/chamber/directory.html" />
   <meta property="og:type" content="website" />
 </head>
+<body><title>Company Members</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
 <body>
+<title>Company Members</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+  <h1>Company Members</h1>
+  <div class="view-toggle">
+    <button onclick="setView('grid')">Grid View</button>
+    <button onclick="setView('list')">List View</button>
+  </div>
+  <div id="members" class="grid"></div>
+
+  <script src="script.js"></script>
   <header>
     <div class="container">
       <h1>Kabale Chamber of Commerce</h1>
