fix: remove duplicate title and stylesheet links in index.html

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   </div>
   <div id="members" class="grid"></div>
 
-  <script src="script.js"></script>
+  <datalist src="data.json"></datalist>
   <header>
     <div class="container">
       <h1>Kabale Chamber of Commerce</h1>
