--- a/index.html
+++ b/index.html
@@ -6,36 +6,24 @@
   <meta name="description" content="Discover local businesses and organizations in the Kabale Chamber of Commerce Directory." />
   <meta name="author" content="Kabale Chamber Web Team" />
   <title>Directory | Kabale Chamber of Commerce</title>
-
-  <!-- Favicon -->
   <link rel="icon" href="favicon.ico" type="image/x-icon" />
-
-  <!-- CSS -->
   <link rel="stylesheet" href="styles.css" />
-
   <!-- Facebook Open Graph Meta Tags -->
   <meta property="og:title" content="Kabale Chamber Directory" />
   <meta property="og:description" content="Find trusted local businesses and organizations in the Kabale region through our official Chamber of Commerce Directory." />
   <meta property="og:image" content="https://yourdomain.com/chamber/images/og-image.jpg" />
   <meta property="og:url" content="https://yourdomain.com/chamber/directory.html" />
   <meta property="og:type" content="website" />
-</head>
-<body><title>Company Members</title>
-  <link rel="stylesheet" href="style.css" />
+  <style>
+    .members.grid { display: flex; flex-wrap: wrap; gap: 1rem; }
+    .members.list { display: block; }
+    .business-card { border: 1px solid #ccc; padding: 1rem; border-radius: 6px; background: #fff; margin-bottom: 1rem; width: 300px; }
+    .members.grid .business-card { width: 300px; }
+    .members.list .business-card { width: 100%; }
+    .view-toggle { margin: 1rem 0; }
+  </style>
 </head>
 <body>
-<title>Company Members</title>
-  <link rel="stylesheet" href="style.css" />
-</head>
-<body>
-  <h1>Company Members</h1>
-  <div class="view-toggle">
-    <button onclick="setView('grid')">Grid View</button>
-    <button onclick="setView('list')">List View</button>
-  </div>
-  <div id="members" class="grid"></div>
-
-  <datalist src="data.json"></datalist>
   <header>
     <div class="container">
       <h1>Kabale Chamber of Commerce</h1>
@@ -51,34 +39,21 @@
   </header>
 
   <main class="container">
+    <h1>Company Members</h1>
+    <div class="view-toggle">
+      <button onclick="setView('grid')">Grid View</button>
+      <button onclick="setView('list')">List View</button>
+    </div>
+    <div class="search-bar">
+      <label for="directorySearch">Search Businesses:</label>
+      <input type="text" id="directorySearch" placeholder="Search by name or category..." oninput="renderMembers()" />
+    </div>
     <section>
       <h2>Member Directory</h2>
       <p>Browse trusted local businesses and organizations that are proud members of the Kabale Chamber of Commerce.</p>
-
-      <article class="business-card">
-        <h3>Green Hills Coffee</h3>
-        <p><strong>Category:</strong> Coffee Shop</p>
-        <p><strong>Address:</strong> 12 Main Street, Kabale</p>
-        <p><strong>Phone:</strong> +256 712 345 678</p>
-        <p><strong>Website:</strong> <a href="https://greenhillscoffe.ug" target="_blank">greenhillscoffee.ug</a></p>
-      </article>
-
-      <article class="business-card">
-        <h3>Rwenzori Tech Solutions</h3>
-        <p><strong>Category:</strong> IT Services</p>
-        <p><strong>Address:</strong> 8 Tech Park, Kabale</p>
-        <p><strong>Phone:</strong> +256 702 112 233</p>
-        <p><strong>Website:</strong> <a href="https://rwenzoritec.ug" target="_blank">rwenzoritech.ug</a></p>
-      </article>
-
-      <!-- More member entries can be added here -->
+      <div id="members" class="members grid"></div>
     </section>
   </main>
-  <div class="search-bar">
-  <label for="directorySearch">Search Businesses:</label>
-  <input type="text" id="directorySearch" placeholder="Search by name or category..." />
-</div>
-
 
   <footer>
     <div class="container">
@@ -86,8 +61,58 @@
     </div>
   </footer>
 
-  <!-- JavaScript -->
-  <script src="/
-  scripts.js"></script>
+  <script>
+    const membersData = [
+      {
+        name: "Green Hills Coffee",
+        category: "Coffee Shop",
+        address: "12 Main Street, Kabale",
+        phone: "+256 712 345 678",
+        website: "https://greenhillscoffe.ug"
+      },
+      {
+        name: "Rwenzori Tech Solutions",
+        category: "IT Services",
+        address: "8 Tech Park, Kabale",
+        phone: "+256 702 112 233",
+        website: "https://rwenzoritec.ug"
+      }
+      // Add more members as needed
+    ];
+
+    let currentView = 'grid';
+
+    function setView(view) {
+      currentView = view;
+      document.getElementById('members').className = 'members ' + view;
+      renderMembers();
+    }
+
+    function renderMembers() {
+      const search = document.getElementById('directorySearch').value.toLowerCase();
+      const membersDiv = document.getElementById('members');
+      membersDiv.innerHTML = '';
+      membersData
+        .filter(m =>
+          m.name.toLowerCase().includes(search) ||
+          m.category.toLowerCase().includes(search)
+        )
+        .forEach(member => {
+          const card = document.createElement('article');
+          card.className = 'business-card';
+          card.innerHTML = `
+            <h3>${member.name}</h3>
+            <p><strong>Category:</strong> ${member.category}</p>
+            <p><strong>Address:</strong> ${member.address}</p>
+            <p><strong>Phone:</strong> ${member.phone}</p>
+            <p><strong>Website:</strong> <a href="${member.website}" target="_blank">${member.website.replace(/^https?:\/\//, '')}</a></p>
+          `;
+          membersDiv.appendChild(card);
+        });
+    }
+
+    // Initial render
+    renderMembers();
+  </script>
 </body>
 </html>
