--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         address: "Plot 45, Kampala Road, Uganda",
         phone: "+256 701 123456",
         website: "https://www.technova.ug",
-        image: "technova.png",
+        image: "technova.jpg",
         membership: 3,
         info: "Leading software company specializing in fintech solutions."
       },
@@ -100,7 +100,7 @@
         address: "Mbale, Eastern Uganda",
         phone: "+256 712 334455",
         website: "https://greenharvest.ug",
-        image: "greenharvest.png",
+        image: "greenharvest.jpg",
         membership: 2,
         info: "Organic farming and agricultural consultancy."
       },
@@ -110,7 +110,9 @@
         address: "Entebbe Highway, Uganda",
         phone: "+256 755 987654",
         website: "https://safariwheels.ug",
-        image: "safariwheels.png",
+        image: "safariwheels.jpg"
+        
+    
         membership: 1,
         info: "Tour company offering guided safaris."
       },
@@ -120,7 +122,7 @@
         address: "Kira Road, Kampala",
         phone: "+256 770 554433",
         website: "https://edusmart.ug",
-        image: "edusmart.png",
+        image: "edusmart.jpg",
         membership: 3,
         info: "E-learning solutions for schools and universities."
       },
@@ -130,7 +132,7 @@
         address: "Industrial Area, Kampala",
         phone: "+256 786 112233",
         website: "https://bytefix.ug",
-        image: "bytefix.png",
+        image: "bytefix.jpg",
         membership: 1,
         info: "Computer repair and IT maintenance services."
       },
@@ -140,7 +142,7 @@
         address: "Gulu City, Uganda",
         phone: "+256 758 667788",
         website: "https://urbanfoods.ug",
-        image: "urbanfoods.png",
+        image: "urbanfoods.jpg",
         membership: 2,
         info: "Fast food restaurant with local cuisine focus."
       },
@@ -150,7 +152,7 @@
         address: "Jinja Road, Uganda",
         phone: "+256 701 998877",
         website: "https://solarbright.ug",
-        image: "solarbright.png",
+        image: "solarbright.jpg",
         membership: 3,
         info: "Renewable energy company specializing in solar panels."
       }
