--- a/index.html
+++ b/index.html
@@ -110,9 +110,7 @@
         address: "Entebbe Highway, Uganda",
         phone: "+256 755 987654",
         website: "https://safariwheels.ug",
-        image: "safariwheels.jpg"
-        
-    
+        image: "safariwheels.jpg",
         membership: 1,
         info: "Tour company offering guided safaris."
       },
