--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
   <meta property="og:url" content="https://yourdomain.com/chamber/index.html" />
   <meta property="og:type" content="website" />
   <style>
-    /* Use your existing CSS from directory.html */
-    /* Add or adjust styles for hero, weather, events, spotlights as needed */
+    
+    /* styles for hero, weather, events, spotlights as needed */
     .hero {
       background: url('images/hero.jpg') center/cover no-repeat;
       min-height: 320px;
@@ -354,7 +354,7 @@
       }
     ];
 
-    // Spotlights: show 2 or 3 random gold/silver members
+    // Spotlights: 
     function renderSpotlights() {
       const spotlightsDiv = document.getElementById('spotlights');
       spotlightsDiv.innerHTML = '';
