--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     
     /* styles for hero, weather, events, spotlights as needed */
     .hero {
-      background: url('images/hero.jpg') center/cover no-repeat;
+      background: url('images/chamber_back.jpg') center/cover no-repeat;
       min-height: 320px;
       display: flex;
       align-items: center;
